{
    "version": 1,
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "GamePlay",
            "id": "03ff31ed-57ea-41f9-b58c-56bd02179f58",
            "actions": [
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "15780235-3206-4e1d-a707-ce85ae310b66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveClick",
                    "type": "Button",
                    "id": "39c8728e-51e7-4cce-9bec-3f1bc36a2f25",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef9cbe6d-2995-4fe0-9b7c-4c4ad11bcd55",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "560bb06b-5b6e-47a5-969e-3c58424cf2ca",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}